# qwenections

./: .gitignore  LICENSE  README.md  config.yaml  environment.yml  prompt_templates.yaml  pyproject.toml
.github/workflows/: actions.yml
scripts/: collect_data.py  evaluate.py  finetune.py  play.py  prepare_data.py  prompt_utils.py
scripts/data/: collect_data.py  prepare_data.py
scripts/tuning/: evaluate.py  finetune.py  play.py
